feat: add favorite establishment resource (#6)
