# src/core/entities/favoriteEstablishment.entity.ts
@@ -1,0 +1,7 @@
+export interface IFavoriteEstablishmentEntity {
+  id: string;
+  user_id: string;
+  establishment_id: string;
+  created_at: Date;
+  updated_at: Date;
+}
